--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -92,7 +92,7 @@
     font-weight: 400;
     font-size: 24px;
     margin: 0;
-    padding: 0;
+    padding: 10px;
     text-align: left; /* Optional: Align text to the left */
     opacity: 80%;
   }
