--- a/src/pages/aboutPage.css
+++ b/src/pages/aboutPage.css
@@ -60,7 +60,9 @@
 .touring-paragraph-1,
 .touring-paragraph-2,
 .touring-paragraph-3 {
-    margin-bottom: 10px; /* Space between paragraphs */
+    margin-bottom: 10px;
+    /* font-family: ; */
+    font-size: 20px;
 }
 
 /* Responsive Styles */
@@ -111,7 +113,7 @@
 .paragraph-column {
     flex: 1; /* Allow the text column to take 1 part of the space */
     max-width: 40%; /* Limit to half the width */
-    text-align: left;
+    text-align: center;
     /* padding-top: 100px; */
 }
 
@@ -122,7 +124,8 @@
 
 .background-paragraph-1,
 .background-paragraph-2 {
-    margin-bottom: 20px; /* Reduced space between paragraphs */
+    margin-bottom: 20px; 
+    font-size: 20px;
 }
 
 .image-column {
